--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -1,7 +1,7 @@
 # default rules
 homepage:
   url:   /
-  param: { module: default, action: underconstruction}  
+  param: {module: collector, action locations, menu map}
 
 #main routes
 map:
