--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -19,6 +19,9 @@ events:
 people:
   url: /people/:page
   param: {module: profile, action list, menu people, page:1}
+search:
+  url: /search/:page
+  param: {module: profile, action list, menu search, page:1}  
     
 
 #guard routes
