main test changed top profit fixed

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -260,7 +260,7 @@ profile_list:
     sf_method: [get]
 profile_my:
   url:        /profile/my
-  params:     { module: profile, action: my }
+  paramroutings:     { module: profile, action: my }
   requirements:
     sf_method: [get]
 profile_remove:
