sesion life time fix

--- a/apps/frontend/config/factories.yml
+++ b/apps/frontend/config/factories.yml
@@ -48,7 +48,7 @@ all:
   user:
     class:       myUser
     param:
-      timeout:   1800           # Session lifetime in seconds
+      timeout:   1000000         # Session lifetime in seconds
 
   storage:
     class: sfHtSessionStorage
