--- a/config/properties.ini
+++ b/config/properties.ini
@@ -2,3 +2,8 @@
   name=FISHERY
   orm=Doctrine
   author=Sergei Belov <limitium@gmail.com>
+[production]
+  host=78.108.84.161
+  port=1022
+  user=u99926
+  dir=/home/u99926/uberlovru/
