changed description and keys fixed css

--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -4,8 +4,8 @@ default:
 
   metas:
     title:        Uberlov
-    description:  карта рыбных мест, рыбные места, рыбаловные места, рыбалка, места ловли,где ловить
-    keywords:     карта, рыбалка, места, ловля
+    description:  Где ловить? Заходи и все узнаешь. Актуальная карта рыболовных мест, покажет где можно рыбачить зимой, рыбачить летом, ловить щуку, ловить окуня, ловить карася и многое другое.
+    keywords:     рыбалка, где ловить, где ловить рыбу, рыболовные места, карта рыбных мест, зимняя рыбалка
     language:     ru
     robots:       index, follow
 
