--- a/apps/frontend/config/factories.yml
+++ b/apps/frontend/config/factories.yml
@@ -48,6 +48,7 @@ all:
   user:
     class:       myUser
     param:
+      use_flash:   false
       timeout:   1000000         # Session lifetime in seconds
 
   storage:
