--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -11,7 +11,7 @@ default:
 
   stylesheets:    [reset,base,header,menu,main,footer,button,common, form, location, comment, profile,rating,profit,user,inbox,talk,pager,address,event,lib/datepicker,lib/redactor/redactor]
 
-  javascripts:    [lib/jquery-1.4.2.js,lib/jqueryBlockUI,lib/jqueryColor,lib/jqueryJSON,lib/datepicker,app,moduleManager]
+  javascripts:    [https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js,lib/jqueryBlockUI,lib/jqueryColor,lib/jqueryJSON,lib/datepicker,app,moduleManager]
 
   has_layout:     true
   layout:         layout
