--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -1,6 +1,8 @@
 prod:
   .settings:
     no_script_name:         true
+    cache:                  true
+    compressed:             true
     logging_enabled:        false
     
 dev:
