fixed comment prev siblings bug!!!!

--- a/apps/frontend/modules/collector/config/cache.yml
+++ b/apps/frontend/modules/collector/config/cache.yml
@@ -2,3 +2,8 @@ data:
   enabled:     true
   with_layout: true
   lifetime:    86400
+locations:
+  enabled:     false
+  contextual:  true
+  with_layout: true
+  lifetime:    86400
