--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -9,7 +9,7 @@ default:
     language:     ru
     robots:       index, follow
 
-  stylesheets:    [reset,base,header,menu,main,footer,button,common, form, location, comment, profile,rating,profit,user,inbox,talk,pager,address,event,lib/datepicker,lib/redactor/redactor]
+  stylesheets:    [bootstrap,reset,base,header,menu,main,footer,button,common, form, location, comment, profile,rating,profit,user,inbox,talk,pager,address,event,lib/datepicker,lib/redactor/redactor]
 
   javascripts:    [https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js,lib/jqueryBlockUI,lib/jqueryColor,lib/jqueryJSON,lib/datepicker,/js/lib/jquery.validate.js,app,moduleManager]
 
