--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -5,7 +5,7 @@ default:
   metas:
     title:        Uberlov
     description:  Где ловить? Заходи и все узнаешь. Актуальная карта рыболовных мест, покажет где можно рыбачить зимой, рыбачить летом, ловить щуку, ловить окуня, ловить карася и многое другое.
-    keywords:     рыбалка, где ловить, где ловить рыбу, рыболовные места, карта рыбных мест, зимняя рыбалка
+    keywords:     рыбалка, где ловить, где ловить рыбу, рыболовные места, карта рыбных мест, зимняя рыбалка,рыбалка где ловить, бесплатаня рыбалка, платная рыбалка
     language:     ru
     robots:       index, follow
 
